--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,14 @@
 {
   "manifest_version": 3,
-  "name": "AI Chat Companion",
+  "name": "AI Companion",
   "version": "1.0",
   "description": "Split screen view for Deepseek and Grok with synchronized input",
+  "icons": {
+    "16": "icons/icon16.png",
+    "32": "icons/icon32.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
   "permissions": [
     "activeTab",
     "scripting",
@@ -17,7 +23,13 @@
     "chrome-extension://*"
   ],
   "action": {
-    "default_title": "AI Chat Companion"
+    "default_title": "AI Chat Companion",
+    "default_icon": {
+      "16": "icons/icon16.png",
+      "32": "icons/icon32.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
+    }
   },
   "background": {
     "service_worker": "background.js"
