--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,40 @@
- 
+# Chrome Extension related
+*.crx
+*.pem
+*.zip
+
+# IDE and Editor files
+.idea/
+.vscode/
+*.swp
+*.swo
+.DS_Store
+Thumbs.db
+
+# Node.js (如果将来需要)
+node_modules/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+package-lock.json
+
+# Build output
+dist/
+build/
+out/
+
+# Debug logs
+debug.log
+*.log
+
+# Local development files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Temporary files
+*.tmp
+*.temp
+.cache/ 
